ftp: Implement creating directory
Signed-off-by: Julian Oes <julian@oes.ch>

--- a/src/system_tests/CMakeLists.txt
+++ b/src/system_tests/CMakeLists.txt
@@ -14,6 +14,7 @@ add_executable(system_tests_runner
     ftp_remove_file.cpp
     ftp_upload_file.cpp
     ftp_rename_file.cpp
+    ftp_create_dir.cpp
 )
 
 target_include_directories(system_tests_runner
