ftp: include remove directory
Signed-off-by: Julian Oes <julian@oes.ch>

--- a/src/system_tests/CMakeLists.txt
+++ b/src/system_tests/CMakeLists.txt
@@ -15,6 +15,7 @@ add_executable(system_tests_runner
     ftp_upload_file.cpp
     ftp_rename_file.cpp
     ftp_create_dir.cpp
+    ftp_remove_dir.cpp
 )
 
 target_include_directories(system_tests_runner
